Add write permissions for terraform job

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -11,9 +11,11 @@ permissions:
 
 jobs:
   terraform:
-    name: 'Terraform'
+    name: Terraform
     runs-on: ubuntu-latest
     environment: production
+    permissions:
+      pull-requests: write
 
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
     defaults:
