--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -45,6 +45,7 @@ jobs:
         run: terraform plan -no-color
         env:
           TF_VAR_hcloud_token: ${{ secrets.TF_VAR_HCLOUD_TOKEN }}
+          TF_VAR_cloudflare_api_token: ${{ secrets.TF_VAR_CLOUDFLARE_API_TOKEN }}
         continue-on-error: true
           
       - uses: actions/github-script@v6
