--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -12,7 +12,9 @@ jobs:
     defaults:
       run:
         shell: bash
-        working-directory: software
     steps:
       - uses: actions/checkout@v2
       - uses: gofrolist/molecule-action@v2
+        with:
+          molecule_working_dir: software
+        
