Improve role layout and switch to debian

--- a/software/molecule/default/converge.yml
+++ b/software/molecule/default/converge.yml
@@ -2,4 +2,4 @@
 - name: Converge
   hosts: all
 
-- import_playbook: ../../playbooks/install_docker/main.yml
+- import_playbook: ../../playbooks/all.yml
