Add partial docker-compose deployment automation

--- a/software/molecule/default/verify.yml
+++ b/software/molecule/default/verify.yml
@@ -5,10 +5,19 @@
   hosts: all
   gather_facts: false
   tasks:
-  - name: Get Docker Version
-    ansible.builtin.command: docker -v
-    register: docker_version
-  
-  - name: Verify Docker Version
-    ansible.builtin.assert:
-      that: '"version 20" in docker_version.stdout'
+    - name: Get docker-compose Services
+      ansible.builtin.stat:
+        path: /srv/caddy
+      register: stat_result
+
+    - name: Verify docker-compose Services
+      ansible.builtin.assert:
+        that: stat_result.stat.exists
+
+    - name: Get Docker Version
+      ansible.builtin.command: docker -v
+      register: docker_version
+
+    - name: Verify Docker Version
+      ansible.builtin.assert:
+        that: '"version 20" in docker_version.stdout'
