Enable molecule pipelining for performance

--- a/software/molecule/default/molecule.yml
+++ b/software/molecule/default/molecule.yml
@@ -10,6 +10,7 @@ provisioner:
   name: ansible
   env:
     ANSIBLE_ROLES_PATH: "../../roles"
+    ANSIBLE_PIPELINING: "True"
 verifier:
   name: ansible
 lint: |
