Add change detection for docker compose

--- a/software/roles/docker_compose_apps/tasks/main.yml
+++ b/software/roles/docker_compose_apps/tasks/main.yml
@@ -18,4 +18,6 @@
     chdir: "/srv/{{ service }}"
   vars:
     service: "{{ item.path | dirname | basename }}"
+  changed_when: "'done' in compose.stdout"
+  register: compose
   loop: "{{ find.files }}"
