--- a/software/molecule/default/molecule.yml
+++ b/software/molecule/default/molecule.yml
@@ -2,10 +2,22 @@
 dependency:
   name: galaxy
 driver:
-  name: docker
+  name: vagrant
+  provider:
+    name: qemu
 platforms:
   - name: instance
-    image: debian:10
+    box: debian/buster64
+    memory: 2048
+    cpus: 2
+    provider_raw_config_args:
+      - qemu_dir = "/usr/bin/"
+      - arch="x86_64"
+      - machine = "q35"
+      - cpu = "max"
+      - net_device = "virtio-net-pci"
+      #- extra_qemu_args = %w(-vga std -accel tcg)
+      - extra_qemu_args = %w(-vga std)
 provisioner:
   name: ansible
   env:
