--- a/software/molecule/default/verify.yml
+++ b/software/molecule/default/verify.yml
@@ -21,3 +21,15 @@
     - name: Verify Docker Version
       ansible.builtin.assert:
         that: '"version 20" in docker_version.stdout'
+    
+    - name: Verify Reverse Proxy Response
+      ansible.builtin.uri:
+        url: https://localhost/
+        validate_certs: no
+
+    - name: Verify Grocy Reverse Proxy Response
+      ansible.builtin.uri:
+        url: https://localhost/login
+        validate_certs: no
+        headers:
+          Host: grocy.pascal.build
