--- a/software/roles/docker/tasks/main.yml
+++ b/software/roles/docker/tasks/main.yml
@@ -68,5 +68,7 @@
 
 - name: Install Docker Module for Python
   pip:
-    name: docker
+    name:
+      - docker
+      - docker-compose
     state: latest
