--- a/software/molecule/default/molecule.yml
+++ b/software/molecule/default/molecule.yml
@@ -1,6 +1,9 @@
 ---
 dependency:
   name: galaxy
+  options:
+    role-file: requirements.yml
+    requirements-file: requirements.yml
 driver:
   name: vagrant
   provider:
