Fix all ansible warnings

--- a/software/molecule/default/converge.yml
+++ b/software/molecule/default/converge.yml
@@ -2,4 +2,5 @@
 - name: Converge
   hosts: all
 
-- import_playbook: ../../site.yml
+- name: Configure All Servers
+  import_playbook: ../../site.yml
