--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,6 @@ jobs:
     defaults:
       run:
         shell: bash
-        working-directory: infra
 
     steps:
       - name: Checkout
@@ -47,15 +46,16 @@ jobs:
       - name: Terraform Init
         id: init
         run: terraform init
+        working-directory: infra
 
       - name: Terraform Apply
         run: terraform apply -auto-approve -input=false
-
-      - name: Switch to Software Directory
-        run: cd ${{ github.workspace }}/software
+        working-directory: infra
 
       - name: Get Dependencies from Ansible Galaxy
         run: ansible-galaxy install -r requirements.yml
+        working-directory: software
 
       - name: Configure Server with Ansible
         run: ansible-playbook -i hosts site.yml
+        working-directory: software
