Run grocy in production mode

--- a/software/roles/docker_compose_apps/files/grocy/grocy.env
+++ b/software/roles/docker_compose_apps/files/grocy/grocy.env
@@ -13,6 +13,8 @@
 #
 # Then we would set GROCY_CURRENCY=EUR 
 
+GROCY_CURRENCY=CHF
+GROCY_CALENDAR_FIRST_DAY_OF_WEEK=1
 
 ## User-supplied Variables
 
@@ -21,7 +23,7 @@
 
 # When you're ready to deploy grocy in production, set GROCY_MODE=production
 # to enable user authentication
-GROCY_MODE
+GROCY_MODE=production
 
 
 ## Distribution-supplied Variables
