--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,23 +1,50 @@
+---
 name: "Deploy"
 
 on:
   push:
     branches:
-    - "master"
+      - master
 
 permissions:
   contents: read
 
 jobs:
   terraform:
-    name: "Terraform"
+    name: Terraform
     runs-on: ubuntu-latest
     environment: production
 
-    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
     defaults:
       run:
-        shell: bash
+        working-directory: infra
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1
+        with:
+          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+
+      - name: Terraform Init
+        id: init
+        run: terraform init
+        working-directory: infra
+
+      - name: Terraform Apply
+        run: terraform apply -auto-approve -input=false
+
+  ansible:
+    name: Ansible
+    needs: terraform
+    runs-on: ubuntu-latest
+    environment: production
+
+    defaults:
+      run:
+        working-directory: software
 
     steps:
       - name: Checkout
@@ -38,24 +65,8 @@ jobs:
             Host *
               StrictHostKeyChecking=accept-new
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v1
-        with:
-          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
-
-      - name: Terraform Init
-        id: init
-        run: terraform init
-        working-directory: infra
-
-      - name: Terraform Apply
-        run: terraform apply -auto-approve -input=false
-        working-directory: infra
-
       - name: Get Dependencies from Ansible Galaxy
         run: ansible-galaxy install -r requirements.yml
-        working-directory: software
 
       - name: Configure Server with Ansible
         run: ansible-playbook -i hosts site.yml
-        working-directory: software
