--- a/software/molecule/default/verify.yml
+++ b/software/molecule/default/verify.yml
@@ -29,7 +29,7 @@
 
     - name: Get Docker Volume
       ansible.builtin.stat:
-        path: /mnt/data/docker/volumes/caddy_caddy_data
+        path: /mnt/data/docker/volumes/traefik_letsencrypt
       register: docker_volume
       become: true
 
@@ -39,17 +39,12 @@
 
     - name: Get docker-compose Services
       ansible.builtin.stat:
-        path: /srv/caddy
+        path: /srv/traefik
       register: stat_result
 
     - name: Verify docker-compose Services
       ansible.builtin.assert:
         that: stat_result.stat.exists
-
-    - name: Verify Reverse Proxy Response
-      ansible.builtin.uri:
-        url: https://localhost/
-        validate_certs: no
 
     - name: Get Grocy Reverse Proxy Response
       ansible.builtin.uri:
