Automatically uninstall old docker compose apps

--- a/software/roles/docker_compose_apps/tasks/install_application.yml
+++ b/software/roles/docker_compose_apps/tasks/install_application.yml
@@ -43,6 +43,7 @@
   community.docker.docker_compose:
     project_src: "/srv/{{ app }}"
     remove_orphans: yes
+    remove_volumes: yes
     recreate: >-
       {{
         (
