--- a/software/roles/docker_compose_app/tasks/uninstall_application.yml
+++ b/software/roles/docker_compose_app/tasks/uninstall_application.yml
@@ -2,6 +2,7 @@
 - name: Uninstall Docker Compose Application
   community.docker.docker_compose:
     project_src: /srv/{{ app }}
+    state: absent
     remove_orphans: yes
     remove_volumes: yes
 
