--- a/software/roles/docker_compose_apps/templates/grocy/docker-compose.yml
+++ b/software/roles/docker_compose_apps/templates/grocy/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - default
       - rproxy
     labels:
+      - traefik.enable=true
       - traefik.http.routers.grocy.rule=Host(`grocy.pascal.build`)
       - traefik.http.routers.grocy.entrypoints=https
       - traefik.http.routers.grocy.tls.certResolver=letsencrypt
