--- a/software/roles/docker_compose_apps/templates/lldap/docker-compose.yml
+++ b/software/roles/docker_compose_apps/templates/lldap/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     read_only: true
     environment:
       LLDAP_JWT_SECRET: ${JWT_SECRET}
-      LLDAP_LDAP_USER_PASS: ${USER_PASSWORD}
+      LLDAP_LDAP_USER_PASS: ${ADMIN_PASSWORD}
       LLDAP_LDAP_BASE_DN: dc=pascal,dc=build
       # LLDAP_VERBOSE: "true"
     volumes:
@@ -21,10 +21,11 @@ services:
       - rproxy
     labels:
       - traefik.enable=true
-      - traefik.http.routers.lldap.rule=Host(`ldap.localhost`)
+      - traefik.http.routers.lldap.rule=Host(`ldap.$BASE_DOMAIN`)
       - traefik.http.routers.lldap.entrypoints=https
       - traefik.http.routers.lldap.tls.certResolver=letsencrypt
       - traefik.http.services.lldap.loadbalancer.server.port=17170
+      - traefik.http.routers.lldap.middlewares=authelia@docker
 
 volumes:
   lldap_data:
